# ram-test

./: .gitignore  README.md  bram_generator.py  ip_main.py  pll_generator.py  run_all.bat  run_all_sim_stages.bat  run_flow.bat  run_sim_quick.bat  run_sim_stage.bat  test_ram.py
hw_test/: CMakeLists.txt  build.bat  hw_test.cpp  pin_mapping.cpp  pin_mapping.h  ram_test_cases.cpp  ram_test_cases.h  run_hw_test.bat  test_patterns.cpp  test_patterns.h  usb_driver.cpp  usb_driver.h
scripts/: preprocess_netlist.ps1
templates/: bram_template.j2  pll_template.j2
templates_test/: test_mif.j2  test_testbench.j2  wrapper_template.j2  wrapper_template.j2.bak
